--- a/mathjax-gui/index.html
+++ b/mathjax-gui/index.html
@@ -32,7 +32,7 @@
   <textarea id="message" name="message" cols="100" rows="15"></textarea>
 </div>
 <div>
-  <iframe src="http://nivit.github.io/mathjax/mathjax-gui.html" width="100%" height="1005" marginheight="100" frameborder="0"></iframe>
+  <iframe src="http://nivit.github.io/mathjax-gui/mathjax-gui.html" width="100%" height="1005" marginheight="100" frameborder="0"></iframe>
   <div>
   </body>
 </html>
