--- a/mathjax-gui/index.html
+++ b/mathjax-gui/index.html
@@ -10,8 +10,8 @@
       <h1>Instructions</h1>
       <ul class="istruzioni">
         <li>
-        Select symbols and/or expressions from the menus or write your
-        formula directly in the CODICE (code) textarea
+        Select symbols and/or expressions from the menus of the editor
+        below or write your formula directly in the CODICE (code) textarea
         </li>
         <li>
         The mark &#63; (question mark) is where the next symbol, number,
