Add instructions to choose the syntax

--- a/mathjax-gui/index.html
+++ b/mathjax-gui/index.html
@@ -26,6 +26,9 @@
         <li>
         If you want to restart or insert a new formula, click CANCELLA (delete)
         </li>
+        <li>
+        You can choose the syntax, LaTeX or ASCIIMathML (default),
+        from the OPZIONI (options).
       </ul>
     </div>
   </div>
