--- a/mathjax-gui/index.html
+++ b/mathjax-gui/index.html
@@ -31,7 +31,7 @@
           </li>
           <li>
           The mark &#63; (question mark) is where the next symbol, number,
-          etc. will be inserted.
+          etc. will be inserted
           </li>
           <li>
           The next mark is selected automatically by pressing the key TAB
@@ -44,7 +44,7 @@
           </li>
           <li>
           You can choose the syntax, LaTeX or ASCIIMathML (default),
-          from the OPZIONI (options).
+          from the OPZIONI (options)
         </ul>
       </div>
       <textarea id="message" name="message" cols="100" rows="15"></textarea>
